--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ ${formData.message}
                 <div className="group grid lg:grid-cols-12 gap-10 items-center">
                   <div className="lg:col-span-7 relative rounded-2xl shadow-2xl overflow-hidden h-[500px]">
                     <ParallaxImage
-                      src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?q=80&w=1974&auto=format&fit=crop"
+                      src="./images/4.jpg"
                       alt="Communication Board"
                       speed={0.05}
                       className="w-full h-full"
