add prototype links

--- a/index.html
+++ b/index.html
@@ -740,6 +740,12 @@ ${formData.message}
                             </div>
                             モバイル最適化UI
                           </li>
+                          <li className="flex items-center gap-4 text-sm text-slate-700 font-bold tracking-wide">
+                            <div className="w-8 h-8 rounded-full bg-teal-100 text-teal-600 flex items-center justify-center">
+                              <ArrowUpRight size={16} />
+                            </div>
+                            <a href="https://help-card-app.vercel.app/">今すぐ試す</a>
+                          </li>
                         </ul>
                       </RevealText>
                       <RevealText delay={500}>
@@ -826,7 +832,7 @@ ${formData.message}
                     <span className="text-teal-400 font-bold tracking-[0.3em] text-xs uppercase mb-4 block">Featured Prototype</span>
                   </RevealText>
                   <RevealText delay={200}>
-                    <h3 className="font-mincho text-3xl md:text-4xl font-bold">コミュニケーションボード</h3>
+                    <h3 className="font-mincho text-3xl md:text-4xl font-bold">コミュニケーションボード - Kakehashi</h3>
                   </RevealText>
                 </div>
 
@@ -872,6 +878,12 @@ ${formData.message}
                               <ArrowUpRight size={16} />
                             </div>
                             音声読み上げ (TTS)
+                          </li>
+                           <li className="flex items-center gap-4 text-sm text-slate-100 font-bold tracking-wide">
+                            <div className="w-8 h-8 rounded-full bg-teal-500/20 text-teal-300 flex items-center justify-center">
+                              <ArrowUpRight size={16} />
+                            </div>
+                            <a href="https://kakehashi-blue.vercel.app/">今すぐ試す</a>
                           </li>
                         </ul>
                       </RevealText>
